--- a/src/index.pug
+++ b/src/index.pug
@@ -5,7 +5,7 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(href="css/style.min.css", rel="stylesheet", type="text/css")
-    link(rel="icon", type="image/ico", href="./images/snake.ico")
+    link(rel="icon", type="image/ico", href="favicon.ico")
     link(rel="preconnect", href="https://fonts.googleapis.com")
     link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
     link(href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap", rel="stylesheet")
