--- a/src/components/ui/play-button/play-btn.scss
+++ b/src/components/ui/play-button/play-btn.scss
@@ -4,7 +4,7 @@
   outline: none;
 
   color: white;
-  font-size: 24px;
+  font-size: inherit;
   font-family: inherit;
   text-transform: uppercase;
 
