--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap');
+
 html,
 body {
   height: 100%;
@@ -6,7 +8,8 @@ body {
 body {
   background: black;
   color: white;
-  font-family: "Press Start 2P", cursive;
+  font-size: 28px;
+  font-family: 'Kalam', cursive;
 }
 
 .wrapper {
